# kicad-source-mirror

./: vcpkg.json
pcbnew/: CMakeLists.txt
pcbnew/pcb_io/: pcb_io.h  pcb_io_mgr.cpp  pcb_io_mgr.h
pcbnew/pcb_io/allegro/: CMakeLists.txt  allegro_file.cpp  allegro_file.h  allegro_parser.cpp  allegro_parser.h  allegro_pcb.cpp  allegro_pcb.h  allegro_structs.h  pcb_io_allegro.cpp  pcb_io_allegro.h
qa/data/pcbnew/plugins/allegro/: AVALON_corrupted.brd  Invalid_Magic.brd  Invalid_Units.brd  LICENSE
qa/tests/pcbnew/: CMakeLists.txt  test_io_mgr.cpp
qa/tests/pcbnew/pcb_io/allegro/: test_allegro_brd_import.cpp
